objects/EUR_ISP_UserBrand__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>UserBrands (EU)</relationshipLabel>
        <relationshipName>UserBrands_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_External_ID_Brand_User_Username__c</fullName>
        <inlineHelpText>You are not allowed to create an UserBrand record with the same Brand External ID and User Username as already exist.</inlineHelpText>
        <label>External ID Brand &amp; User Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserBrands_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserBrand (EU)</label>
    <nameField>
        <displayFormat>UB-{00000000}</displayFormat>
        <label>UserBrand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserBrands (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>